fix: Temporary use html min-width to fix hero text wrapping in mobile screen size issue.

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -28,3 +28,7 @@
     display: unset;
   }
 }
+
+html {
+  min-width: 430px;
+}
